--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@ function baseLayoutTime(title){
     colorway: COLORWAY,
     paper_bgcolor:'rgba(0,0,0,0)',
     plot_bgcolor:'rgba(0,0,0,0)',
+    legend:{font:TICK_FONT,bgcolor:'#0e1422',bordercolor:'rgba(255,255,255,.25)',borderwidth:1},
     margin:{t:48,r:20,b:56,l:64},
     xaxis:Object.assign({title:'Year', tickmode:'linear', dtick:1, gridcolor:GRID_COLOR, tickfont:TICK_FONT, titlefont:TITLE_FONT}, AXIS_LINE),
     yaxis:Object.assign({title:'Count', gridcolor:GRID_COLOR, tickfont:TICK_FONT, titlefont:TITLE_FONT, zerolinecolor:'rgba(255,255,255,.5)'}, AXIS_LINE),
@@ -352,6 +353,7 @@ function baseLayoutCat(title){
     colorway: COLORWAY,
     paper_bgcolor:'rgba(0,0,0,0)',
     plot_bgcolor:'rgba(0,0,0,0)',
+    legend:{font:TICK_FONT,bgcolor:'#0e1422',bordercolor:'rgba(255,255,255,.25)',borderwidth:1},
     margin:{t:48,r:20,b:100,l:64},
     xaxis:Object.assign({title:'Cuisine', type:'category', tickangle:-30, gridcolor:GRID_COLOR, tickfont:TICK_FONT, titlefont:TITLE_FONT}, AXIS_LINE),
     yaxis:Object.assign({title:'Net change', gridcolor:GRID_COLOR, tickfont:TICK_FONT, titlefont:TITLE_FONT}, AXIS_LINE),
